deploy/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: service
spec:
  selector:
    app: service
  ports:
    - name: service
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
  labels:
    app: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service
  template:
    metadata:
      labels:
        app: service
      annotations:
        instrumentation.opentelemetry.io/inject-python: "observability/instrumentation"
    spec:
      containers:
        - name: service
          image: europe-west2-docker.pkg.dev/portfolio-463406/docker-repository/queue_service
          ports:
            - containerPort: 80
          volumeMounts:
            - name: temporal-tls-secrets
              mountPath: /etc/temporal/tls
      imagePullSecrets:
        - name: gcp-pull-secret
      volumes:
        - name: temporal-tls-secrets
          secret:
            secretName: queue-temporal-tls-client
