deploy/overlays/prod/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prod-queue-small-rate-limit
spec:
  parentRefs:
    - name: default-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "queue.austinbayley.co.uk"
  rules:
    - matches:
        - method: POST
          path:
            type: PathPrefix
            value: /service/messages/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: '/messages/'
      backendRefs:
        - name: service
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: prod-policy-small-rate-limit
spec:
  mergeType: StrategicMerge
  rateLimit:
    type: Global
    global:
      rules:
      - clientSelectors:
        - sourceCIDR:
            value: 0.0.0.0/0
            type: Distinct
        shared: false
        limit:
          requests: 1
          unit: Minute
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prod-queue-small-rate-limit
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prod-queue-protected
spec:
  parentRefs:
    - name: default-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "queue.austinbayley.co.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ui
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /backend
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: ''
      backendRefs:
        - name: gateway
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /service
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: ''
      backendRefs:
        - name: service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prod-queue-oauth
spec:
  parentRefs:
    - name: default-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "queue.austinbayley.co.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy
          namespace: prod-auth
          port: 4180
